fixed section overflow issue on mobile

--- a/08182016.css
+++ b/08182016.css
@@ -84,7 +84,7 @@ width: 100%;
   height:5em;
   }
   section{
-    height: 40em;
+    height:33em;
   }
 }
 #notecontainer{width: 100%;}::-webkit-scrollbar {
